--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -14,9 +14,9 @@
     Description: {{ product.description }}
   </p>
 
-  <button (click)="share()">
-    Share
-  </button>
+  <button type="button" (click)="share()">
+  Share
+</button>
 
   <app-product-alerts
   [product]="product" 
